# tweet-automation

./: .gitignore  README.md  pyproject.toml
src/: run.py
src/notion/: databases.py
src/tweet_automation/: ai.py  analysis.ipynb  fetch.py  templates.py
