[project]
name = "tweet-automation"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "nehiljain", email = "2761999+nehiljain@users.noreply.github.com"},
]
dependencies = [
    "ollama",
    "litellm",
    "instructor",
    "pendulum",
    "jupyterlab",
    "ipykernel",
    "notion-client",
    "thefuzz",
    "tdqm",
    "pydantic",
    "pandas",
    "notion2md",
    "setuptools>=69.0.3",
    "ipdb>=0.13.13",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
